--- a/result/2022-07-18.md
+++ b/result/2022-07-18.md
@@ -107,3 +107,4 @@
 107. [孙颖莎 心态](https://s.weibo.com//weibo?q=%E5%AD%99%E9%A2%96%E8%8E%8E%20%E5%BF%83%E6%80%81&Refer=top) 89624
 108. [手机出现划痕该保修吗](https://s.weibo.com//weibo?q=%23%E6%89%8B%E6%9C%BA%E5%87%BA%E7%8E%B0%E5%88%92%E7%97%95%E8%AF%A5%E4%BF%9D%E4%BF%AE%E5%90%97%23&Refer=top) 76091
 109. [王楚钦双冠](https://s.weibo.com//weibo?q=%23%E7%8E%8B%E6%A5%9A%E9%92%A6%E5%8F%8C%E5%86%A0%23&Refer=top) 68782
+110. [王嘉男说国歌响起一切都值了](https://s.weibo.com//weibo?q=%23%E7%8E%8B%E5%98%89%E7%94%B7%E8%AF%B4%E5%9B%BD%E6%AD%8C%E5%93%8D%E8%B5%B7%E4%B8%80%E5%88%87%E9%83%BD%E5%80%BC%E4%BA%86%23&Refer=top) 54583
