--- a/result/2022-07-19.md
+++ b/result/2022-07-19.md
@@ -40,3 +40,4 @@
 40. [中国男篮大胜印尼男篮](https://s.weibo.com//weibo?q=%23%E4%B8%AD%E5%9B%BD%E7%94%B7%E7%AF%AE%E5%A4%A7%E8%83%9C%E5%8D%B0%E5%B0%BC%E7%94%B7%E7%AF%AE%23&Refer=top) 73535
 41. [女子留宿多名网恋男友家实施盗窃](https://s.weibo.com//weibo?q=%23%E5%A5%B3%E5%AD%90%E7%95%99%E5%AE%BF%E5%A4%9A%E5%90%8D%E7%BD%91%E6%81%8B%E7%94%B7%E5%8F%8B%E5%AE%B6%E5%AE%9E%E6%96%BD%E7%9B%97%E7%AA%83%23&Refer=top) 51374
 42. [河南省考7月21日公布笔试成绩](https://s.weibo.com//weibo?q=%23%E6%B2%B3%E5%8D%97%E7%9C%81%E8%80%837%E6%9C%8821%E6%97%A5%E5%85%AC%E5%B8%83%E7%AC%94%E8%AF%95%E6%88%90%E7%BB%A9%23&Refer=top) 8733
+43. [教育局回应学校按分数排队办入学](https://s.weibo.com//weibo?q=%23%E6%95%99%E8%82%B2%E5%B1%80%E5%9B%9E%E5%BA%94%E5%AD%A6%E6%A0%A1%E6%8C%89%E5%88%86%E6%95%B0%E6%8E%92%E9%98%9F%E5%8A%9E%E5%85%A5%E5%AD%A6%23&Refer=top) 7891
