--- a/result/2022-07-19.md
+++ b/result/2022-07-19.md
@@ -20,8 +20,8 @@
 20. [主任会扔下楼的病历](https://s.weibo.com//weibo?q=%23%E4%B8%BB%E4%BB%BB%E4%BC%9A%E6%89%94%E4%B8%8B%E6%A5%BC%E7%9A%84%E7%97%85%E5%8E%86%23&Refer=top) 235079
 21. [当代年轻人的朋友圈文案](https://s.weibo.com//weibo?q=%23%E5%BD%93%E4%BB%A3%E5%B9%B4%E8%BD%BB%E4%BA%BA%E7%9A%84%E6%9C%8B%E5%8F%8B%E5%9C%88%E6%96%87%E6%A1%88%23&Refer=top) 213321
 22. [理发前后变化能有多大](https://s.weibo.com//weibo?q=%23%E7%90%86%E5%8F%91%E5%89%8D%E5%90%8E%E5%8F%98%E5%8C%96%E8%83%BD%E6%9C%89%E5%A4%9A%E5%A4%A7%23&Refer=top) 199305
-23. [才知道快速冰镇饮料的方法](https://s.weibo.com//weibo?q=%23%E6%89%8D%E7%9F%A5%E9%81%93%E5%BF%AB%E9%80%9F%E5%86%B0%E9%95%87%E9%A5%AE%E6%96%99%E7%9A%84%E6%96%B9%E6%B3%95%23&Refer=top) 171601
-24. [教育局回应学校按分数排队办入学](https://s.weibo.com//weibo?q=%23%E6%95%99%E8%82%B2%E5%B1%80%E5%9B%9E%E5%BA%94%E5%AD%A6%E6%A0%A1%E6%8C%89%E5%88%86%E6%95%B0%E6%8E%92%E9%98%9F%E5%8A%9E%E5%85%A5%E5%AD%A6%23&Refer=top) 166510
+23. [教育局回应学校按分数排队办入学](https://s.weibo.com//weibo?q=%23%E6%95%99%E8%82%B2%E5%B1%80%E5%9B%9E%E5%BA%94%E5%AD%A6%E6%A0%A1%E6%8C%89%E5%88%86%E6%95%B0%E6%8E%92%E9%98%9F%E5%8A%9E%E5%85%A5%E5%AD%A6%23&Refer=top) 190291
+24. [才知道快速冰镇饮料的方法](https://s.weibo.com//weibo?q=%23%E6%89%8D%E7%9F%A5%E9%81%93%E5%BF%AB%E9%80%9F%E5%86%B0%E9%95%87%E9%A5%AE%E6%96%99%E7%9A%84%E6%96%B9%E6%B3%95%23&Refer=top) 171601
 25. [晚晚 象组](https://s.weibo.com//weibo?q=%E6%99%9A%E6%99%9A%20%E8%B1%A1%E7%BB%84&Refer=top) 153566
 26. [奶茶锦衣卫便宜又好喝](https://s.weibo.com//weibo?q=%23%E5%A5%B6%E8%8C%B6%E9%94%A6%E8%A1%A3%E5%8D%AB%E4%BE%BF%E5%AE%9C%E5%8F%88%E5%A5%BD%E5%96%9D%23&Refer=top) 143665
 27. [对台军售休想撼动中国统一大势](https://s.weibo.com//weibo?q=%23%E5%AF%B9%E5%8F%B0%E5%86%9B%E5%94%AE%E4%BC%91%E6%83%B3%E6%92%BC%E5%8A%A8%E4%B8%AD%E5%9B%BD%E7%BB%9F%E4%B8%80%E5%A4%A7%E5%8A%BF%23&Refer=top) 141433
@@ -40,8 +40,9 @@
 40. [不能拍蒜的菜刀等于放弃中餐市场](https://s.weibo.com//weibo?q=%23%E4%B8%8D%E8%83%BD%E6%8B%8D%E8%92%9C%E7%9A%84%E8%8F%9C%E5%88%80%E7%AD%89%E4%BA%8E%E6%94%BE%E5%BC%83%E4%B8%AD%E9%A4%90%E5%B8%82%E5%9C%BA%23&Refer=top) 74536
 41. [中国男篮大胜印尼男篮](https://s.weibo.com//weibo?q=%23%E4%B8%AD%E5%9B%BD%E7%94%B7%E7%AF%AE%E5%A4%A7%E8%83%9C%E5%8D%B0%E5%B0%BC%E7%94%B7%E7%AF%AE%23&Refer=top) 73535
 42. [女子留宿多名网恋男友家实施盗窃](https://s.weibo.com//weibo?q=%23%E5%A5%B3%E5%AD%90%E7%95%99%E5%AE%BF%E5%A4%9A%E5%90%8D%E7%BD%91%E6%81%8B%E7%94%B7%E5%8F%8B%E5%AE%B6%E5%AE%9E%E6%96%BD%E7%9B%97%E7%AA%83%23&Refer=top) 51374
-43. [男子被蚊子叮咬患脓毒症进ICU](https://s.weibo.com//weibo?q=%23%E7%94%B7%E5%AD%90%E8%A2%AB%E8%9A%8A%E5%AD%90%E5%8F%AE%E5%92%AC%E6%82%A3%E8%84%93%E6%AF%92%E7%97%87%E8%BF%9BICU%23&Refer=top) 43443
-44. [女子违停后被交警老公贴罚单](https://s.weibo.com//weibo?q=%23%E5%A5%B3%E5%AD%90%E8%BF%9D%E5%81%9C%E5%90%8E%E8%A2%AB%E4%BA%A4%E8%AD%A6%E8%80%81%E5%85%AC%E8%B4%B4%E7%BD%9A%E5%8D%95%23&Refer=top) 40537
-45. [新欢可以代替旧爱吗](https://s.weibo.com//weibo?q=%23%E6%96%B0%E6%AC%A2%E5%8F%AF%E4%BB%A5%E4%BB%A3%E6%9B%BF%E6%97%A7%E7%88%B1%E5%90%97%23&Refer=top) 21061
-46. [女子违停被交警老公贴罚单](https://s.weibo.com//weibo?q=%23%E5%A5%B3%E5%AD%90%E8%BF%9D%E5%81%9C%E8%A2%AB%E4%BA%A4%E8%AD%A6%E8%80%81%E5%85%AC%E8%B4%B4%E7%BD%9A%E5%8D%95%23&Refer=top) 14929
+43. [男子被蚊子叮咬患脓毒症进ICU](https://s.weibo.com//weibo?q=%23%E7%94%B7%E5%AD%90%E8%A2%AB%E8%9A%8A%E5%AD%90%E5%8F%AE%E5%92%AC%E6%82%A3%E8%84%93%E6%AF%92%E7%97%87%E8%BF%9BICU%23&Refer=top) 45432
+44. [女子违停后被交警老公贴罚单](https://s.weibo.com//weibo?q=%23%E5%A5%B3%E5%AD%90%E8%BF%9D%E5%81%9C%E5%90%8E%E8%A2%AB%E4%BA%A4%E8%AD%A6%E8%80%81%E5%85%AC%E8%B4%B4%E7%BD%9A%E5%8D%95%23&Refer=top) 44611
+45. [新欢可以代替旧爱吗](https://s.weibo.com//weibo?q=%23%E6%96%B0%E6%AC%A2%E5%8F%AF%E4%BB%A5%E4%BB%A3%E6%9B%BF%E6%97%A7%E7%88%B1%E5%90%97%23&Refer=top) 29120
+46. [女子违停被交警老公贴罚单](https://s.weibo.com//weibo?q=%23%E5%A5%B3%E5%AD%90%E8%BF%9D%E5%81%9C%E8%A2%AB%E4%BA%A4%E8%AD%A6%E8%80%81%E5%85%AC%E8%B4%B4%E7%BD%9A%E5%8D%95%23&Refer=top) 16237
 47. [河南省考7月21日公布笔试成绩](https://s.weibo.com//weibo?q=%23%E6%B2%B3%E5%8D%97%E7%9C%81%E8%80%837%E6%9C%8821%E6%97%A5%E5%85%AC%E5%B8%83%E7%AC%94%E8%AF%95%E6%88%90%E7%BB%A9%23&Refer=top) 8733
+48. [搞笑女化妆翻车体验](https://s.weibo.com//weibo?q=%23%E6%90%9E%E7%AC%91%E5%A5%B3%E5%8C%96%E5%A6%86%E7%BF%BB%E8%BD%A6%E4%BD%93%E9%AA%8C%23&Refer=top) 8062
